Add build tests cmake args to rocprofiler-compute

--- a/profiler/CMakeLists.txt
+++ b/profiler/CMakeLists.txt
@@ -104,6 +104,9 @@ if(THEROCK_ENABLE_ROCPROFV3)
     BACKGROUND_BUILD
     CMAKE_ARGS
       -DHIP_PLATFORM=amd
+      -DENABLE_TESTS=ON
+      -DINSTALL_TESTS=ON
+      -DTEST_FROM_INSTALL=ON
       -DCHECK_PYTHON_DEPS=OFF
     CMAKE_INCLUDES
       therock_explicit_finders.cmake
