update upload logs path

--- a/.github/workflows/release_portable_linux_packages.yml
+++ b/.github/workflows/release_portable_linux_packages.yml
@@ -391,4 +391,7 @@ jobs:
         if: ${{ !cancelled() }}
         with:
           name: ccache_log
-          path: ${{ env.OUTPUT_DIR }}/build/logs/ccache*
+          path: |
+            ${{ env.OUTPUT_DIR }}/build/logs/ccache.log
+            ${{ env.OUTPUT_DIR }}/build/logs/ccache_stats.log
+
