Add ROCPROFSYS_BUILD_TESTING argument to rocprofiler-systems

--- a/profiler/CMakeLists.txt
+++ b/profiler/CMakeLists.txt
@@ -214,6 +214,7 @@ if(THEROCK_ENABLE_ROCPROFV3)
         -DROCPROFSYS_BUILD_LIBIBERTY=ON
         -DROCPROFSYS_BUILD_BOOST=ON
         -DROCPROFSYS_BUILD_DYNINST=ON
+        -DROCPROFSYS_BUILD_TESTING=ON
       CMAKE_INCLUDES
         therock_explicit_finders.cmake
       RUNTIME_DEPS
