make ci work for generic release branches

--- a/.github/workflows/build_portable_linux_pytorch_wheels.yml
+++ b/.github/workflows/build_portable_linux_pytorch_wheels.yml
@@ -298,7 +298,8 @@ jobs:
       - name: Determine upload flag
         env:
           BUILD_RESULT: ${{ needs.build_pytorch_wheels.result }}
-          TEST_RESULT: ${{ needs.test_pytorch_wheels.result }}
+          # If it is a release branch, we bypass test results and always promote from whl-staging/ to whl/
+          TEST_RESULT: ${{ startsWith(github.ref_name, 'release/therock-') && 'success' || needs.test_pytorch_wheels.result }}
           TEST_RUNS_ON: ${{ needs.generate_target_to_run.outputs.test_runs_on }}
           BYPASS_TESTS_FOR_RELEASES: ${{ needs.generate_target_to_run.outputs.bypass_tests_for_releases }}
         run: python ./build_tools/github_actions/promote_wheels_based_on_policy.py
