--- a/.github/workflows/build_portable_linux_pytorch_wheels.yml
+++ b/.github/workflows/build_portable_linux_pytorch_wheels.yml
@@ -166,12 +166,14 @@ jobs:
       # Checkout nightly sources from https://github.com/pytorch/pytorch
       # Pin to known working commit until upstream nightly is stable again
       # Working commit from 2025-12-27: 0bc5144aee9ee503ed74939a413b5fa0b04de315
+      # Note: Using --repo-hashtag nightly for audio/vision since pinned upstream
+      # commit doesn't have related_commits file (only ROCm fork has it)
       - name: Checkout PyTorch Source Repos from nightly branch
         if: ${{ inputs.pytorch_git_ref == 'nightly' }}
         run: |
           ./external-builds/pytorch/pytorch_torch_repo.py checkout --repo-hashtag 0bc5144aee9ee503ed74939a413b5fa0b04de315 --patchset nightly
-          ./external-builds/pytorch/pytorch_audio_repo.py checkout --require-related-commit
-          ./external-builds/pytorch/pytorch_vision_repo.py checkout --require-related-commit
+          ./external-builds/pytorch/pytorch_audio_repo.py checkout --repo-hashtag nightly
+          ./external-builds/pytorch/pytorch_vision_repo.py checkout --repo-hashtag nightly
           ./external-builds/pytorch/pytorch_triton_repo.py checkout --patch --patchset nightly
 
       # Checkout stable sources from https://github.com/ROCm/pytorch
@@ -179,8 +181,8 @@ jobs:
         if: ${{ inputs.pytorch_git_ref != 'nightly' }}
         run: |
           ./external-builds/pytorch/pytorch_torch_repo.py checkout --gitrepo-origin https://github.com/ROCm/pytorch.git --repo-hashtag ${{ inputs.pytorch_git_ref }} --patchset ${{ inputs.pytorch_patchset }}
-          ./external-builds/pytorch/pytorch_audio_repo.py checkout --require-related-commit
-          ./external-builds/pytorch/pytorch_vision_repo.py checkout --require-related-commit
+          ./external-builds/pytorch/pytorch_audio_repo.py checkout --torch-dir external-builds/pytorch/pytorch --require-related-commit
+          ./external-builds/pytorch/pytorch_vision_repo.py checkout --torch-dir external-builds/pytorch/pytorch --require-related-commit
           ./external-builds/pytorch/pytorch_triton_repo.py checkout
 
       - name: Create pip cache directory
