--- a/.github/workflows/build_windows_pytorch_wheels.yml
+++ b/.github/workflows/build_windows_pytorch_wheels.yml
@@ -183,6 +183,8 @@ jobs:
       # Checkout nightly sources from https://github.com/pytorch/pytorch
       # Pin to known working commit until upstream nightly is stable again
       # Working commit from 2025-12-27: 0bc5144aee9ee503ed74939a413b5fa0b04de315
+      # Note: Using --repo-hashtag nightly for audio/vision since pinned upstream
+      # commit doesn't have related_commits file (only ROCm fork has it)
       - name: Checkout PyTorch source repos (nightly branch)
         if: ${{ inputs.pytorch_git_ref == 'nightly' }}
         run: |
@@ -193,12 +195,10 @@ jobs:
             --patchset nightly
           python ./external-builds/pytorch/pytorch_audio_repo.py checkout \
             --checkout-dir ${{ env.CHECKOUT_ROOT }}/audio \
-            --torch-dir ${{ env.CHECKOUT_ROOT }}/torch \
-            --require-related-commit
+            --repo-hashtag nightly
           python ./external-builds/pytorch/pytorch_vision_repo.py checkout \
             --checkout-dir ${{ env.CHECKOUT_ROOT }}/vision \
-            --torch-dir ${{ env.CHECKOUT_ROOT }}/torch \
-            --require-related-commit
+            --repo-hashtag nightly
 
       # Checkout stable sources from https://github.com/ROCm/pytorch
       - name: Checkout PyTorch Source Repos from stable branch
