--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -3,6 +3,7 @@ pytest==8.3.5
 pytest-subtests==0.10.0
 pytest-check==2.5.3
 pytest-timeout==2.4.0
+perfetto==0.7.0
 PyYAML==6.0.2
 tabulate==0.9.0
 prettytable==3.12.0
