--- a/.github/workflows/ci_windows.yml
+++ b/.github/workflows/ci_windows.yml
@@ -29,6 +29,10 @@ on:
         type: string
       sanity_check_only_for_family:
         type: boolean
+      external_source_checkout:
+        type: boolean
+        description: "Whether source is from external repo (rocm-libraries/systems)"
+        default: false
 
 permissions:
   contents: read
@@ -47,6 +51,7 @@ jobs:
       build_variant_suffix: ${{ inputs.build_variant_suffix }}
       package_version: ${{ inputs.rocm_package_version }}
       expect_failure: ${{ inputs.expect_failure }}
+      external_source_checkout: ${{ inputs.external_source_checkout }}
     permissions:
       contents: read
       id-token: write
