--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,20 @@ on:
         type: string
         description: "If provided, the tests will run on this artifact ID"
         default: ""
+  workflow_call:
+    inputs:
+      external_source_checkout:
+        type: boolean
+        description: "Whether source is from external repo (rocm-libraries/systems)"
+        default: false
+      matrix_module_path:
+        type: string
+        description: "Path to therock_matrix.py in calling repo (for external repos)"
+        default: ""
+      therock_ref:
+        type: string
+        description: "TheRock git ref to use (for external repos)"
+        default: ""
   pull_request:
     types:
       - labeled
@@ -68,6 +82,9 @@ jobs:
     uses: ./.github/workflows/setup.yml
     with:
       build_variant: "release"
+      external_source_checkout: ${{ inputs.external_source_checkout || false }}
+      matrix_module_path: ${{ inputs.matrix_module_path || '' }}
+      therock_ref: ${{ inputs.therock_ref || '' }}
 
   linux_build_and_test:
     name: Linux::${{ matrix.variant.family }}::${{ matrix.variant.build_variant_label }}
@@ -97,6 +114,7 @@ jobs:
       rocm_package_version: ${{ needs.setup.outputs.rocm_package_version }}
       test_type: ${{ needs.setup.outputs.test_type }}
       sanity_check_only_for_family: ${{ matrix.variant.sanity_check_only_for_family == true }}
+      external_source_checkout: ${{ inputs.external_source_checkout || false }}
     permissions:
       contents: read
       id-token: write
@@ -128,6 +146,7 @@ jobs:
       rocm_package_version: ${{ needs.setup.outputs.rocm_package_version }}
       test_type: ${{ needs.setup.outputs.test_type }}
       sanity_check_only_for_family: ${{ matrix.variant.sanity_check_only_for_family == true }}
+      external_source_checkout: ${{ inputs.external_source_checkout || false }}
     permissions:
       contents: read
       id-token: write
